разбивает код на модули

--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
     </div>
   </template>
 
+<script src="js/get-data-list.js"></script>
+<script src="js/set-default-mode.js"></script>
+<script src="js/main-pin.js"></script>
 <script src="js/map.js"></script>
+<script src="js/form.js"></script>
+<script src="js/reset.js"></script>
 </body>
 </html>
