--- a/index.html
+++ b/index.html
@@ -248,11 +248,14 @@
     </div>
   </template>
 
-<script src="js/get-data-list.js"></script>
-<script src="js/set-default-mode.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/data.js"></script>
+<script src="js/default-mode.js"></script>
 <script src="js/main-pin.js"></script>
+<script src="js/popup-card.js"></script>
 <script src="js/map.js"></script>
 <script src="js/form.js"></script>
+<script src="js/form-validity.js"></script>
 <script src="js/reset.js"></script>
 </body>
 </html>
