настраивает обмен данными с удалённым сервером

--- a/index.html
+++ b/index.html
@@ -249,13 +249,14 @@
   </template>
 
 <script src="js/utils.js"></script>
-<script src="js/data.js"></script>
-<script src="js/default-mode.js"></script>
+<script src="js/start-screen.js"></script>
+<!--<script src="js/base-source.js"></script>-->
+<script src="js/backend.js"></script>
 <script src="js/main-pin.js"></script>
-<script src="js/popup-card.js"></script>
+<script src="js/shown-ad.js"></script>
 <script src="js/map.js"></script>
 <script src="js/form.js"></script>
 <script src="js/form-validity.js"></script>
-<script src="js/reset.js"></script>
+<script src="js/rollback.js"></script>
 </body>
 </html>
