--- a/index.html
+++ b/index.html
@@ -250,11 +250,13 @@
 
 <script src="js/utils.js"></script>
 <script src="js/start-screen.js"></script>
-<!--<script src="js/base-source.js"></script>-->
 <script src="js/backend.js"></script>
+<script src="js/response-message.js"></script>
 <script src="js/main-pin.js"></script>
 <script src="js/shown-ad.js"></script>
 <script src="js/map.js"></script>
+<script src="js/selection.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/form.js"></script>
 <script src="js/form-validity.js"></script>
 <script src="js/rollback.js"></script>
