--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
 <script src="js/form.js"></script>
 <script src="js/form-validity.js"></script>
 <script src="js/rollback.js"></script>
-<script src="js/avatar.js"></script>
-<script src="js/photos.js"></script>
+<script src="js/pictures-loader.js"></script>
 </body>
 </html>
