--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <script src="js/backend.js"></script>
 <script src="js/response-message.js"></script>
 <script src="js/main-pin.js"></script>
-<script src="js/shown-ad.js"></script>
+<script src="js/displayed-offer.js"></script>
 <script src="js/map.js"></script>
 <script src="js/selection.js"></script>
 <script src="js/debounce.js"></script>
